--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ raur = "7.0.0"
 srcinfo = "1.2.0"
 
 
-ansi_term = "0.12.1"
+ansiterm = "0.12.2"
 anyhow = { version = "1.0.93", features = ["backtrace"] }
 chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
 dirs = "5.0.1"
@@ -54,7 +54,6 @@ tr = "0.1.10"
 unicode-width = "0.2.0"
 regex = "1.11.1"
 signal-hook = "0.3.17"
-once_cell = "1.20.2"
 bitflags = "2.6.0"
 toml = { version = "0.8.19", features = ["preserve_order"] }
 
